--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,24 +4,19 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "About"
-  url = "#about"
-  weight = 10
-
-[[main]]
   name = "Blog"
   url = "#posts"
   weight = 40
 
 # [[main]]
-  # name = "In progress"
-  # url = "#projects"
+  # name = "Featured"
+  # url = "#featured"
   # weight = 30
 
 [[main]]
   name = "Essays"
   url = "#publications"
-  weight = 20
+  weight = 50
 
 # [[main]]
   # name = "Airbnb"
