--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -46,7 +46,7 @@ ignoreFiles = ["\\.org$", "\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rma
   section = [ "HTML", "RSS" ]
 
 # Configure BlackFriday Markdown rendering.
-#   See: https://gohugo.io/getting-started/configuration/#configure-blackfriday
+#   See: :https://gohugo.io/getting-started/configuration/#configure-blackfriday
 [blackfriday]
   hrefTargetBlank = true  # `true` opens external links in a new tab. See https://github.com/gohugoio/hugo/issues/2424
 	angledQuotes = false
